<resources>
    <string name="app_name">Lesbos Guide</string>
    <string name="island">Lesbos</string>
    <string name="island_info">It is a fertile island, overgrown with pine trees and olive groves, with intense landscapes.</string>
    <string name="tomain">Let \'s explore</string>
    <string name="home_bottom_bar">Home</string>
    <string name="heart_bottom_bar">Favourite</string>
    <string name="add_bottom_bar">Add to Tour</string>
    <string name="search_bottom_bar">Search</string>
    <string name="favs_bottom_bar">Favourites</string>
    <string name="history_bottom_bar">History</string>
    <string name="settings_button">Settings</string>
    <string name="user_loc">Find your location.</string>
    <string name="point_loc">FInd the sight\'s location.</string>
    <string name="sights_textview">Sights</string>
    <string name="beaches_textview">Beaches</string>
    <string name="villages_textview">Villages</string>
    <string name="mypos">You.</string>

    <string name="title_activity_maps">Map</string>
    <string name="map_not_ready">The map has not loaded yet, please, wait.</string>
    <string name="waiting_message">We are still searching... Please wait</string>
    <string name="what2see">"What to see in "</string>
    <string name="toocold">It\'s too cold to go for swimming</string>
    <string name="no_beach">"There are no beaches starting with "</string>
    <string name="no_villages">"There are no villages starting with "</string>
    <string name="favourites_textview">Favourites</string>
    <string name="tours_bottom_bar">Tours</string>
    <string name="no_favourites_textview">There are no favourites yet</string>
</resources>