<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:fitsSystemWindows="true"
    android:padding="10dp"
    tools:context=".SearchActivity">

    <HorizontalScrollView
        android:id="@+id/beaches_hsv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beach_textview">


        <LinearLayout
            android:id="@+id/beaches_cardholder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/villages_hsv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scrollbars="none"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/villages_textview">


        <LinearLayout
            android:id="@+id/villages_cardholder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/villages_textview"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoSizeTextType="uniform"
        android:text="@string/villages_textview"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beaches_hsv" />

    <TextView
        android:id="@+id/beach_textview"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoSizeTextType="uniform"
        android:text="@string/beaches_textview"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edittext" />

    <EditText
        android:id="@+id/search_edittext"
        android:layout_width="270dp"
        android:layout_height="59dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"

        android:background="@drawable/search_drawble"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/search_bottom_bar"
        android:importantForAutofill="no"
        android:inputType="text"
        android:isScrollContainer="true"
        android:padding="10dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottombar"
        android:layout_width="338dp"
        android:layout_height="59dp"
        android:layout_gravity="bottom"
        android:layout_margin="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangled"
        app:elevation="2dp"
        app:itemIconSize="35dp"
        app:itemIconTint="@drawable/items_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_items" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="61dp"
        android:layout_height="59dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/round"
        android:onClick="search"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:icon="@drawable/ic_baseline_search_24"
        app:iconSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/search_edittext"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_beach_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="@string/no_beach"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/beaches_hsv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/beaches_hsv" />

    <TextView
        android:id="@+id/no_villages_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:text="@string/no_villages"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/villages_hsv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/villages_hsv"
        app:layout_constraintTop_toTopOf="@+id/villages_hsv" />


</androidx.constraintlayout.widget.ConstraintLayout>